tweaks based on team suggestions

--- a/AncientReligionsRestored/localization/religion/religion_celtic_l_english.yml
+++ b/AncientReligionsRestored/localization/religion/religion_celtic_l_english.yml
@@ -13,6 +13,25 @@
  god_brigid:0 "Brigid"
  god_brigid_possessive:0 "Brigid's"
  holy_order_warriors_of_lugh:0 "Warriors of Lugh"
+ celtic_priest_male:0 "druid"
+ celtic_priest_male_plural:0 "druids"
+ celtic_priest_female:0 "druidess"
+ celtic_priest_female_plural:0 "druidesses"
+ celtic_bishop_male:0 "chief druid"
+ celtic_bishop_male_plural:0 "chief druids"
+ celtic_bishop_female:0 "chief druidess"
+ celtic_bishop_female_plural:0 "chief druidesses"
+ celtic_priest_alternate_plural:0 "druids"
+ councillor_court_chaplain_celtic_county:1 "Druid"
+ councillor_court_chaplain_celtic_county_possessive:1 "Druid's"
+ councillor_court_chaplain_celtic_duchy:1 "Chief Druid"
+ councillor_court_chaplain_celtic_duchy_possessive:1 "Chief Druid's"
+ councillor_court_chaplain_celtic_kingdom:1 "High Druid"
+ councillor_court_chaplain_celtic_kingdom_possessive:1 "High Druid's"
+ councillor_court_chaplain_celtic_empire:0 "Divine Emperor"
+ councillor_court_chaplain_celtic_empire_female:0 "Divine Empress"
+ councillor_court_chaplain_celtic_empire_possessive:0 "Divine Emperor's"
+ councillor_court_chaplain_celtic_empire_female_possessive:0 "Divine Empress's"
 
  # holy sites
  holy_site_dublin_name:0 "Hill of Tara"
@@ -26,11 +45,10 @@
  holy_site_wiltshire_name:0 "Stonehenge"
  holy_site_wiltshire_effect_name:0 "From [holy_site|E] #weak ($holy_site_wiltshire_name$)#!"
 
-
 # gaelic
  gaelic_pagan:1 "Gaelic"
  gaelic_pagan_adj:2 "Gaelic"
- gaelic_pagan_desc:1 "The traditional religion of the Celtic people of Ireland, an expansive mythology of heroic god-kings fighting demons and establishing ordered kingdoms. Preserved initially via oral history then recorded by Christian monks, Gaelic belief lives on in the form of folk tales and ancient chronicles."
+ gaelic_pagan_desc:1 "The traditional religion of the Celtic people of Ireland, an expansive mythology of heroic god-kings fighting demons and establishing ordered kingdoms. Preserved initially via oral history then recorded by celtic monks, Gaelic belief lives on in the form of folk tales and ancient chronicles."
  gaelic_pagan_adherent:2 "Gael"
  gaelic_pagan_adherent_plural:2 "Gaels"
  gaelic_pagan_old:1 "Old Gaelic"
@@ -39,16 +57,7 @@
  gaelic_pagan_old_adherent_plural:2 "Old Gael"
  gaelic_pagan_religious_symbol:0 "triquetra"
  gaelic_pagan_religious_text:0 "the Béaloideas"
- gaelic_pagan_religious_head_title:0 "Archdruid"
- gaelic_pagan_priest_male:0 "druid"
- gaelic_pagan_priest_male_plural:0 "druids"
- gaelic_pagan_priest_female:0 "druidess"
- gaelic_pagan_priest_female_plural:0 "druidesses"
- gaelic_pagan_bishop_male:0 "court druid"
- gaelic_pagan_bishop_male_plural:0 "court druids"
- gaelic_pagan_bishop_female:0 "court druidess"
- gaelic_pagan_bishop_female_plural:0 "court druidesses"
- gaelic_pagan_priest_alternate_plural:0 "druids"
+
  gaelic_pagan_positive_afterlife:0 "Tír na nÓg"
  gaelic_pagan_negative_afterlive:0 "Tech Duinn"
 
