--- a/AncientReligionsRestored/localization/religion/religion_celtic_l_english.yml
+++ b/AncientReligionsRestored/localization/religion/religion_celtic_l_english.yml
@@ -59,7 +59,7 @@
 # gaelic
  gaelic_pagan:1 "Gaelic"
  gaelic_pagan_adj:2 "Gaelic"
- gaelic_pagan_desc:1 "The traditional religion of the Celtic people of Ireland, an expansive mythology of heroic god-kings invading Ireland, fighting demons, and establishing kingdoms. Preserved initially via oral history then recorded by celtic monks, Gaelic belief lives on in the form of folk tales and ancient chronicles."
+ gaelic_pagan_desc:1 "The traditional religion of the Celtic people of Ireland, an expansive mythology of heroic god-kings invading Ireland, fighting demons, and establishing kingdoms. Preserved initially via oral history then recorded by Christian monks, Gaelic belief lives on in the form of folk tales and ancient chronicles."
  gaelic_pagan_adherent:2 "Gael"
  gaelic_pagan_adherent_plural:2 "Gaels"
  gaelic_pagan_old:1 "Old Gaelic"
