--- a/AncientReligionsRestored/localization/english/religion/religion_celtic_l_english.yml
+++ b/AncientReligionsRestored/localization/english/religion/religion_celtic_l_english.yml
@@ -60,12 +60,12 @@ l_english:
  holy_order_warriors_of_lugh:0 "Warriors of Lugh"
  
  #Gaelic
- gaelic_pagan:1 "Gaelic"
+ gaelic_pagan:1 "Creideamh Sí"
  gaelic_pagan_adj:2 "Gaelic"
  gaelic_pagan_adherent:2 "Gael"
  gaelic_pagan_adherent_plural:2 "Gaels"
  gaelic_pagan_desc:1 "The traditional religion of the Celtic people of Ireland, an expansive mythology of heroic god-kings invading Ireland, fighting demons, and establishing kingdoms. Preserved initially via oral history, then recorded by Christian monks, Gaelic belief lives on in the form of folk tales and ancient chronicles."
- gaelic_pagan_old:1 "Old Gaelic"
+ gaelic_pagan_old:1 "Old Creideamh Sí"
  gaelic_pagan_old_adj:2 "Old Gaelic"
  gaelic_pagan_old_adherent:2 "Old Gael"
  gaelic_pagan_old_adherent_plural:2 "Old Gaels"
