--- a/AncientReligionsRestored/localization/english/religion/religion_celtic_l_english.yml
+++ b/AncientReligionsRestored/localization/english/religion/religion_celtic_l_english.yml
@@ -46,6 +46,8 @@ l_english:
  holy_site_glauberg_effect_name:0 "From [holy_site|E] #weak ($holy_site_glauberg_name$)#!"
  holy_site_glanum_name:0 "Glanum"
  holy_site_glanum_effect_name:0 "From [holy_site|E] #weak ($holy_site_glanum_name$)#!"
+ holy_site_lugo_name:0 "Lugo"
+ holy_site_lugo_effect_name:0 "From [holy_site|E] #weak ($holy_site_lugo_name$)#!"
 
  #Deities
  god_lugh:0 "Lugh"
@@ -112,8 +114,8 @@ l_english:
  # Brythonic
  god_andastre:0 "Andastre"
  god_andastre_possessive:0 "Andastre's"
- god_brigantia:0 "Brigantia"
- god_brigantia:0 "Brigantia's"
+ god_nantosuelta:0 "Nantosuelta"
+ god_nantosuelta_possessive:0 "Nantosuelta's"
  god_manawydan:0 "Manawydan fab Lyr"
  god_manawydan_possessive:0 "Manawydan's"
  god_gwydion:0 "Gwydion"
@@ -122,6 +124,31 @@ l_english:
  god_nodens_possessive:0 "Nodens'"
  god_arianrhod:0 "Arianrhod"
  god_arianrhod_possessive:0 "Arianrhod's"
+ god_senuna:0 "Senuna"
+ god_senuna_possessive:0 "Senuna's"
+ god_morgan_le_fey:0 "Morgan le Fey"
+ god_morgan_le_fey_possessive:0 "Morgan's"
+ god_arawn:0 "Arawn"
+ god_arawn_possessive:0 "Arawn's"
+ evil_god_hafgan:0 "Hafgan"
+ evil_god_hafgan_possessive:0 "Hafgan's"
+
+ brythonic_pantheon_name:0 "the gods"
+ brythonic_pagan:1 "Brythonic"
+ brythonic_pagan_adj:2 "Brythonic"
+ brythonic_pagan_desc:1 "The beliefs of the ancient peoples of Britain, drawn out once again from Gallo-Roman syncretism, Arthurian myth, and the stories still told by Welsh bards. It's characterized by tales of knights, magicians, and gods and goddesses of the land."
+ brythonic_pagan_adherent:2 "Briton"
+ brythonic_pagan_adherent_plural:2 "Britons"
+ brythonic_pagan_old:1 "Old Brythonic"
+ brythonic_pagan_old_adj:2 "Old Brythonic"
+ brythonic_pagan_old_adherent:2 "Old Briton"
+ brythonic_pagan_old_adherent_plural:2 "Old Britons"
+ brythonic_pagan_religious_symbol:0 "Brigantia's Cross"
+ brythonic_pagan_religious_text:0 "the Tales"
+
+ brythonic_pagan_divine_realm:0 "Annwn"
+ brythonic_pagan_positive_afterlife:0 "Annwn"
+ brythonic_pagan_negative_afterlive:0 "Caer Sidi"
 
  # gaulish
  gaulish_pagan:1 "Gaulish"
@@ -131,7 +158,7 @@ l_english:
  gaulish_pagan_adherent_plural:2 "Gauls"
  gaulish_pagan_old:1 "Old Gaulish"
  gaulish_pagan_old_adj:2 "Old Gaulish"
- gaulish_pagan_old_adherent:2 "Old Gaulish"
+ gaulish_pagan_old_adherent:2 "Old Gaul"
  gaulish_pagan_old_adherent_plural:2 "Old Gauls"
  gaulish_pagan_religious_symbol:0 "triskelion"
  gaulish_pagan_religious_text:0 "the Tales"
