fix some issues brought up in review

--- a/AncientReligionsRestored/localization/english/religion/religion_celtic_l_english.yml
+++ b/AncientReligionsRestored/localization/english/religion/religion_celtic_l_english.yml
@@ -165,8 +165,8 @@
  gaulish_pagan_religious_symbol:0 "triskelion"
  gaulish_pagan_religious_text:0 "the Tales"
 
- gaulish_pagan_positive_afterlife:0 "Ande-Dubnos"
- gaulish_pagan_negative_afterlive:0 "Ande-Dubnos"
+ gaulish_pagan_positive_afterlife:0 "Antumnos"
+ gaulish_pagan_negative_afterlive:0 "Antumnos"
 
  gaulish_pantheon_name:1 "Deuognatoi"
 
