--- a/AncientReligionsRestored/localization/english/religion/religion_celtic_l_english.yml
+++ b/AncientReligionsRestored/localization/english/religion/religion_celtic_l_english.yml
@@ -197,7 +197,7 @@
  god_taranus:0 "Taranus"
  god_taranus_possessive:0 "Taranus's"
  god_cernunnos:0 "Cernunnos"
- god_cernunnos_possessive:0 "Cernunnos"
+ god_cernunnos_possessive:0 "Cernunnos's"
  god_great_mothers:0 "The Great Mothers"
  god_great_mothers_posessive:0 "The Great Mothers'"
  god_abnoba:0 "Abnoba"
