--- a/AncientReligionsRestored/localization/english/religion/religion_mesopotamian_l_english.yml
+++ b/AncientReligionsRestored/localization/english/religion/religion_mesopotamian_l_english.yml
@@ -79,8 +79,8 @@
  parsu_pagan:1 "Parsu"
  parsu_pagan_adj:2 "Parsu"
  parsu_pagan_desc:1 "'Parsu' refers to the religious duty of those who worship the great Igigi and Annunaki gods, but also the fundamental obligations or 'me's central to the Mesopotamian worldview. This faith represents a religion based largely on Neo-Babylonian deities and cultic practices."
- parsu_pagan_adherent:2 "Awilutum"
- parsu_pagan_adherent_plural:2 "Awilutum"
+ parsu_pagan_adherent:2 "Awilum"
+ parsu_pagan_adherent_plural:2 "Awilu"
  parsu_pagan_religious_symbol:0 "An-garza"
  parsu_pagan_religious_text:0 "the Myths of Creation"
 
